--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -155,7 +155,8 @@
 
         $("#saveButton").click(function (e) {
             e.preventDefault();
-            //console.log("btnsubmit click");
+            //alert();
+            console.log("btnsubmit click");
             $(".error").addClass("hide");
             if (formValidations() == true) {
                 debugger;
