--- a/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
@@ -7,7 +7,7 @@
 		<div class="col-md-12 text-center">
 			<div class="card card-gray shadow">
 				<div class="card-header">
-					<h4>Zone Setup</h4>
+					<h4>Zone List</h4>
 
 				</div>
 			</div>
@@ -25,8 +25,7 @@
 							<h4>Search by:</h4>
 						</div>
 						<div class="col-md-3 float-right">
-							<input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
-
+							<input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="Search by any" />
 						</div>
 						<div class="col-7">
 							<button class="btn btn-outline-primary btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Zone</button>
@@ -59,23 +58,33 @@
 				<div class="modal-body">
 					<form id="formzone">
 						<input type="hidden" id="hdzonetId" />
-						<div class="form-row">
-							<div class="form-group col-md-8">
-								<label for="ddlorgname" class="control-label">OrganizationName</label>
-								@Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlorgname, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-								<span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
-							</div>
-							<div class="form-group col-md-8">
-								<label for="ddlZoneName" class="control-label">ZoneName</label>
-								<input type="text" id="ddlZoneName" class="form-control form-control-sm" />
-								<span class="error hide required-ZoneName font-weight-bold">Input Zone Name!</span>
-								<span class="error hide duplicate-ZoneName font-weight-bold">Already ZoneName Exist!</span>
-							</div>
-							<div class="form-group col-md-8">
-								<label for="ddlRemarks" class="control-label">Remarks</label>
-								<input type="text" id="ddlRemarks" class="form-control form-control-sm" />
-							</div>
-						</div>
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                                <label for="ddlorgname" class="control-label">OrganizationName</label>
+                                @Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlorgname, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="ddlZoneName" class="control-label">ZoneName</label>
+                                <input type="text" id="ddlZoneName" class="form-control form-control-sm" />
+                                <span class="error hide required-ZoneName font-weight-bold">Input Zone Name!</span>
+                                <span class="error hide duplicate-ZoneName font-weight-bold">Already ZoneName Exist!</span>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="ddlZoneAsign" class="control-label">ZoneAsignTO</label>
+                                <input type="text" id="ddlZoneAsign" class="form-control form-control-sm" />
+                                <span class="error hide required-PeopleName font-weight-bold">Input Asign People Name!</span> 
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="ddlAMobilenum" class="control-label">Mobile Number</label>
+                                <input type="text" id="ddlAMobilenum" class="form-control form-control-sm" />
+                                <span class="error hide required-Number font-weight-bold">Input Valid Mobile Number!</span>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="ddlRemarks" class="control-label">Remarks</label>
+                                <input type="text" id="ddlRemarks" class="form-control form-control-sm" />
+                            </div>
+                        </div>
 					</form>
 				</div>
 
@@ -103,55 +112,188 @@
 
 	<script type="text/javascript">
 
+
 		//asign modal value
 
 		var hdzonetId = $("#hdzonetId");
 		var ddlorgname = $("#ddlorgname");
 		var ddlZoneName = $("#ddlZoneName");
 		var ddlRemarks = $("#ddlRemarks");
+        var ddlAMobilenum = $("#ddlAMobilenum");
+        var ddlZoneAsign = $("#ddlZoneAsign");
+        var SearchAny = $("#SearchAny");//src
 
 
-		//openmodals
-		function OpenModal() {
-			$("#spanModalHead").text("Add New Zone");
-			$("#spanSaveTextZone").text('Save');
-			$("#zonemodal").modal("show");
-			$(".error").addClass("hide");
-		}
-		$(document).ready(function () {
-			$('.select2').select2();
+        //select2
+        $(document).ready(function () {
+            $('.select2').select2();
 
-			//Initialize Select2 Elements
-			$('.select2bs4').select2({
-				theme: 'bootstrap4'
-			});
-			
-		})
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+            LoadZoneDataTable();
 
-		//createbutton
-		$("#addButton").click(function (e) {
-			alert("Clicked");
-			OpenModal()
-		})
+        })
 
 
-
-		//save in database
-		$("#saveButton").click(function (e) {
-			//debugger;
-			e.preventDefault();
-			//alert(TryParseInt(ddlorgname.val(), 0));
-			var data = JSON.stringify({ ZoneId: TryParseInt(hdzonetId.val(), 0), OrganizationId: TryParseInt(ddlorgname.val(), 0), ZoneName: ddlZoneName.val(), Remarks: ddlRemarks.val() });
-			
-			console.log(data);
+        //openmodals
+        function OpenModal() {
+            $("#spanModalHead").text("Add New Zone");
+            $("#spanSaveTextZone").text('Save');
+            $("#zonemodal").modal("show");
+            $(".error").addClass("hide");
+        }
 
 
-			return data;
+        //createbutton
+        $("#addButton").click(function (e) {
 
-		})
+            e.preventDefault();
+            clearCtrlZone();
+            OpenModal();
+        })
+
+
+        //src
+        SearchAny.keyup(function () {
+            LoadZoneDataTable();
+        })
+
+        //loaddatatable
+        function LoadZoneDataTable() {
+            //debugger;
+            var data = { flag: "Zonsetup", name: $.trim(SearchAny.val()) }
+            $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/Zonelist', data)).then(function (res, status) {
+                console.log(res);
+                if (status == "success") {
+                    $("#dataContainer").empty();
+                    $("#dataContainer").append(res);
+                }
+            }).fail(function (err) { console.log(err) })
+        }
+
+
+        //save in database
+        $("#saveButton").click(function (e) {
+            
+            e.preventDefault();
+            $(".error").addClass("hide");
+
+            if (ValidationForm() == true) {
+                var data = JSON.stringify({ ZoneId: TryParseInt(hdzonetId.val(), 0), OrganizationId: TryParseInt(ddlorgname.val(), 0), ZoneName: ddlZoneName.val(), Remarks: ddlRemarks.val(), ZoneAsignName: ddlZoneAsign.val(), MobileNumber: ddlAMobilenum.val() });
+                console.log(data);
+                $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveZonetInfo', data, getToken())).then(function (res, status) {
+                    debugger;
+                    console.log(status);
+                    console.log(res);
+                    if (res == true) {
+                        $("#zonemodal").modal("toggle");
+                        toastrSuccessAlert(execuStatus.successSave);
+                        LoadZoneDataTable();
+                    }
+                    else {
+                        //message("#msg2");
+                        //toastrErrorAlert(execuStatus.fail);
+                        alert("This Zone Already Exist");
+                    }
+                    enable("#saveButton");
+                }).fail(function (err) {
+                    console.log(err);
+                    enable("#saveButton");
+                });
+            }
+        });
+ 
+
+        //edit
+        $(document).on("click", "a.data-edit-item-Zone", function (e) {
+            //alert();
+            //debugger;
+            e.preventDefault()
+            clearCtrlZone();
+
+            var row = $(this).parent().parents('tr');
+            var td1 = row.find('td:eq(1)').html();
+            var td2 = row.find('td:eq(2)').html();
+            var td3 = row.find('td:eq(3)').html();
+            var td4 = row.find('td:eq(4)').html();
+            var td5 = row.find('td:eq(5)').html();
+            var td6 = row.find('td:eq(6)').html();
+            var td8 = row.find('td:eq(8)').html();
+
+            console.log(td2 + td3 + td4);
+
+            hdzonetId.val(td1);
+            ddlorgname.val(td2);
+            ddlorgname.trigger("change");
+            ddlZoneName.val(td4);
+            ddlZoneAsign.val(td5);
+            ddlAMobilenum.val(td6);
+            ddlRemarks.val(td8);
+
+
+            OpenModal();
+            $("#spanModalHead").text('Update Zone');
+            $("#spanSaveTextZone").text('Update');
+        })
+
+
+        //validationform
+        function ValidationForm() {
+            //debugger;
+            Isvalid = true;
+            $('.error').addClass("hide");
+            if ($.trim(ddlorgname.val()) == 0) {
+                $('.required-OrganizationName').removeClass("hide");
+                Isvalid = false;
+            }
+            if ($.trim(ddlZoneName.val()) == 0)
+            {
+                $('.required-ZoneName').removeClass("hide");
+                Isvalid = false;
+            }
+            if ($.trim(ddlZoneAsign.val()) == 0) {
+                $('.required-PeopleName').removeClass("hide");
+                Isvalid = false;
+            }
+            if ($.trim(ddlAMobilenum.val()) <= 88001000000001) {
+                $('.required-Number').removeClass("hide");
+                Isvalid = false;
+            }
+            
+
+            //
+            //if ($.trim(ddlDepotName.val()) ==0) {
+            //    $('.duplicate-DepotName').removeClass("hide");
+            //    Isvalid = false;
+            //}
+            //if (depotName.value == list.value) {
+            //    $('.duplicate-DepotName').removeClass("hide");
+            //    Isvalid = false;
+            //}
+            //else {
+            //    alert('DepotName Already Exists');
+            //}
 
 
 
+            return Isvalid
+
+        }
+
+
+        //clear
+        function clearCtrlZone() {
+          
+            ddlZoneName.val("");
+            ddlorgname.val("");
+            ddlRemarks.val("");
+            ddlAMobilenum.val("");
+            ddlZoneAsign.val("");
+            hdzonetId.val('0');
+
+        }
 
 	</script>
 }
