--- a/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
@@ -1,109 +1,52 @@
-﻿
-@{
+﻿@{
 	ViewBag.Title = "ZoneList";
 }
 
+
 <div class="row">
-		<div class="col-md-12 text-center">
-			<div class="card card-gray shadow">
-				<div class="card-header">
-					<h4>Zone List</h4>
+    <div class="col-md-12">
 
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="row">
-		<div class="col-md-12">
-			<div class="card card-navy shadow">
-				<div class="card-header">
-					<div class="row text-sm">
-
-						<div class="col-md-2">
-							<h4>Search by:</h4>
-						</div>
-						<div class="col-md-3 float-right">
-							<input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="Search by any" />
-						</div>
-						<div class="col-7">
-							<button class="btn btn-outline-primary btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Zone</button>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="col-md-12" style="margin-top:-10px">
-		<div class="card">
-			<div class="card-body">
-				<div class="col-md-12" id="dataContainer">
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="modal" id="zonemodal" role="dialog">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header alert-secondary">
-					<h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
-					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-				</div>
-				<div class="modal-body">
-					<form id="formzone">
-						<input type="hidden" id="hdzonetId" />
-                        <div class="form-row">
-                            <div class="form-group col-md-12">
-                                <label for="ddlorgname" class="control-label">OrganizationName</label>
-                                @Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlorgname, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                                <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label for="ddlZoneName" class="control-label">ZoneName</label>
-                                <input type="text" id="ddlZoneName" class="form-control form-control-sm" />
-                                <span class="error hide required-ZoneName font-weight-bold">Input Zone Name!</span>
-                                <span class="error hide duplicate-ZoneName font-weight-bold">Already ZoneName Exist!</span>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label for="ddlZoneAsign" class="control-label">ZoneAsignTO</label>
-                                <input type="text" id="ddlZoneAsign" class="form-control form-control-sm" />
-                                <span class="error hide required-PeopleName font-weight-bold">Input Asign People Name!</span> 
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label for="ddlAMobilenum" class="control-label">Mobile Number</label>
-                                <input type="text" id="ddlAMobilenum" class="form-control form-control-sm" />
-                                <span class="error hide required-Number font-weight-bold">Input Valid Mobile Number!</span>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label for="ddlRemarks" class="control-label">Remarks</label>
-                                <input type="text" id="ddlRemarks" class="form-control form-control-sm" />
+        <div class="card card-primary card-outline card-tabs" style="margin-top:-20px">
+            <div class="card-header p-0 pt-1 border-bottom-0">
+                <ul class="nav nav-tabs" id="custom-tabs-two-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="custom-tabs-two-ZoneList-tab" data-toggle="pill" href="#custom-tabs-two-ZoneList" role="tab" aria-controls="custom-tabs-two-ZoneList" aria-selected="true">Existing Zone List</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <div class="tab-content" id="custom-tabs-two-tabContent">
+                    @Html.AntiForgeryToken()
+                    <div class="tab-pane fade show active" id="custom-tabs-two-ZoneList" role="tabpanel" aria-labelledby="custom-tabs-two-ZoneList-tab">
+                        <div class="row" style="margin-top:-15px">
+                            <div class="col-md-12">
+                                <div class="card card-gray-dark">
+                                    <div class="card-header">
+                                        <div class="row">
+                                            <div class="col-md-3">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <h5 class="text-center text-bold">
+                                                    Zone List
+                                                </h5>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <a href="/AgroConfiguration/CreateZonelist" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Zone</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-					</form>
-				</div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
 
-				<div class="modal-footer btn-default">
-					<div class="col-md-6">
-						<div id="msg1" class="alert alert-success hide float-left">
-							Data has been saved Successful!
-						</div>
-						<div id="msg2" class="alert alert-danger hide float-left">
-							Data has been failed to save!
-						</div>
-					</div>
-					<button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
-					<button type="submit" class="btn btn-outline-success btn-sm float-right" id="saveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextZone">Save</span> </button>
-				</div>
-			</div>
-		</div>
-	</div>
+    </div>
+</div>
+
 
 
 
@@ -113,173 +56,6 @@
 	<script type="text/javascript">
 
 
-		//asign modal value
-
-		var hdzonetId = $("#hdzonetId");
-		var ddlorgname = $("#ddlorgname");
-		var ddlZoneName = $("#ddlZoneName");
-		var ddlRemarks = $("#ddlRemarks");
-        var ddlAMobilenum = $("#ddlAMobilenum");
-        var ddlZoneAsign = $("#ddlZoneAsign");
-        var SearchAny = $("#SearchAny");//src
-
-
-        //select2
-        $(document).ready(function () {
-            $('.select2').select2();
-
-            //Initialize Select2 Elements
-            $('.select2bs4').select2({
-                theme: 'bootstrap4'
-            });
-            LoadZoneDataTable();
-
-        })
-
-
-        //openmodals
-        function OpenModal() {
-            $("#spanModalHead").text("Add New Zone");
-            $("#spanSaveTextZone").text('Save');
-            $("#zonemodal").modal("show");
-            $(".error").addClass("hide");
-        }
-
-
-        //createbutton
-        $("#addButton").click(function (e) {
-
-            e.preventDefault();
-            clearCtrlZone();
-            OpenModal();
-        })
-
-
-        //src
-        SearchAny.keyup(function () {
-            LoadZoneDataTable();
-        })
-
-        //loaddatatable
-        function LoadZoneDataTable() {
-            //debugger;
-            var data = { flag: "Zonsetup", name: $.trim(SearchAny.val()) }
-            $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/Zonelist', data)).then(function (res, status) {
-                console.log(res);
-                if (status == "success") {
-                    $("#dataContainer").empty();
-                    $("#dataContainer").append(res);
-                }
-            }).fail(function (err) { console.log(err) })
-        }
-
-
-        //save in database
-        $("#saveButton").click(function (e) {
-            
-            e.preventDefault();
-            $(".error").addClass("hide");
-
-            if (ValidationForm() == true) {
-                var data = JSON.stringify({ ZoneId: TryParseInt(hdzonetId.val(), 0), OrganizationId: TryParseInt(ddlorgname.val(), 0), ZoneName: ddlZoneName.val(), Remarks: ddlRemarks.val(), ZoneAsignName: ddlZoneAsign.val(), MobileNumber: ddlAMobilenum.val() });
-                console.log(data);
-                $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveZonetInfo', data, getToken())).then(function (res, status) {
-                    debugger;
-                    console.log(status);
-                    console.log(res);
-                    if (res == true) {
-                        $("#zonemodal").modal("toggle");
-                        toastrSuccessAlert(execuStatus.successSave);
-                        LoadZoneDataTable();
-                    }
-                    else {
-                        //message("#msg2");
-                        //toastrErrorAlert(execuStatus.fail);
-                        alert("This Zone Already Exist");
-                    }
-                    enable("#saveButton");
-                }).fail(function (err) {
-                    console.log(err);
-                    enable("#saveButton");
-                });
-            }
-        });
- 
-
-        //edit
-        $(document).on("click", "a.data-edit-item-Zone", function (e) {
-            //alert();
-            //debugger;
-            e.preventDefault()
-            clearCtrlZone();
-
-            var row = $(this).parent().parents('tr');
-            var td1 = row.find('td:eq(1)').html();
-            var td2 = row.find('td:eq(2)').html();
-            var td3 = row.find('td:eq(3)').html();
-            var td4 = row.find('td:eq(4)').html();
-            var td5 = row.find('td:eq(5)').html();
-            var td6 = row.find('td:eq(6)').html();
-            var td8 = row.find('td:eq(8)').html();
-
-            console.log(td2 + td3 + td4);
-
-            hdzonetId.val(td1);
-            ddlorgname.val(td2);
-            ddlorgname.trigger("change");
-            ddlZoneName.val(td4);
-            ddlZoneAsign.val(td5);
-            ddlAMobilenum.val(td6);
-            ddlRemarks.val(td8);
-
-
-            OpenModal();
-            $("#spanModalHead").text('Update Zone');
-            $("#spanSaveTextZone").text('Update');
-        })
-
-
-        //validationform
-        function ValidationForm() {
-            //debugger;
-            Isvalid = true;
-            $('.error').addClass("hide");
-            if ($.trim(ddlorgname.val()) == 0) {
-                $('.required-OrganizationName').removeClass("hide");
-                Isvalid = false;
-            }
-            if ($.trim(ddlZoneName.val()) == 0)
-            {
-                $('.required-ZoneName').removeClass("hide");
-                Isvalid = false;
-            }
-            if ($.trim(ddlZoneAsign.val()) == 0) {
-                $('.required-PeopleName').removeClass("hide");
-                Isvalid = false;
-            }
-           if ($.trim(ddlAMobilenum.val()) <= 88001000000001) {
-                $('.required-Number').removeClass("hide");
-                Isvalid = false;
-            } 
-
-
-
-            return Isvalid
-
-        }
-
-
-        //clear
-        function clearCtrlZone() {
-          
-            ddlZoneName.val("");
-            ddlorgname.val("");
-            ddlRemarks.val("");
-            ddlAMobilenum.val("");
-            ddlZoneAsign.val("");
-            hdzonetId.val('0');
-
-        }
 
 	</script>
 }
